welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:7: error: not found: value col
	col();
        ^PictureMono2:15: error: not found: value baissebrosse
	baissebrosse;
        ^PictureMono2:16: error: not found: value levebrosse
	levebrosse;
        ^