welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
def faireMotif()
{
	co1();
	co2();
	col();
	co2();
	co1();
	gauche; avance;avance;avance;avance; droite; 
}

def point()
{
	baissebrosse;
	levebrosse;
}

def co1()
{
	gauche; avance;
	point;
	avance; avance;
	point;
	avance; droite;avance;
}

def co2 ()
{
	point; droite; avance; avance; point; avance;avance; point;gauche; avance;
}
faireMotif

}
